<resources>
    <string name="app_name">Valoraciones manga</string>
    <string name="assessment">Valoraciones</string>
    <string name="manga">Manga</string>
    <string name="profile">Perfil</string>
    <string name="search">Buscar</string>
    <string name="user_name">Email</string>
    <string name="password">Contraseña</string>
    <string name="create_user">Registrarse</string>
    <string name="login">Iniciar sesion</string>
    <string name="type_email">El usuario debe ser un email</string>
    <string name="password_length">La contraseña debe ser de 6 caracteres o mas</string>
    <string name="user_exists">El usuario ya existe</string>
    <string name="user_incorrect">El usuario o la contreseña son incorrectos</string>
    <string name="manga_title">Manga title</string>
    <string name="manga_author">Manga author</string>
    <string name="search_hint">Buscar manga</string>
    <string name="genres">Generos</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="score">0</string>
    <string name="max_score">/10</string>
    <string name="start_date">Fecha de inicio: </string>
    <string name="finish_date">Fecha de finalización: </string>
    <string name="function">Author function</string>
    <string name="title_error_internet">Error en la conexión</string>
    <string name="description_error_internet">"Se ha producido un error en la conexión. Por favor, verifica que tienes conexión a internet y vuelve ha intentarlo"</string>
    <string name="title_error_unknown">Error desconocido</string>
    <string name="description_error_unknown">Se ha producido un error desconocido en la aplicación. Por favor, vuelve a intentarlo.</string>
    <string name="button_retry">Reintentar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="comment">Comentario</string>
    <string name="assess">Valorar</string>
    <string name="score_label">Valoración</string>
    <string name="user_not_logged">Usuario no registrado</string>
    <string name="description_user_not_logged">Usuario no registrado. Por favor inicie sesión y vuelve a intentarlo</string>
    <string name="assessment_add">Valoracion agregada correctamente</string>
</resources>