<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/width_image_manga"
        android:layout_height="@dimen/height_image_manga"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/title"
        app:layout_constraintTop_toTopOf="@id/image"
        app:layout_constraintLeft_toRightOf="@id/image"
        android:layout_marginStart="@dimen/margin"
        style="@style/AppCardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/score"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"/>

    <TextView
        app:layout_constraintTop_toTopOf="@id/score"
        app:layout_constraintLeft_toRightOf="@id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_score"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/genres_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintLeft_toRightOf="@id/image"/>

    <TextView
        android:id="@+id/synopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/margin"/>

    <TextView
        android:id="@+id/start_year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/synopsis"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/start_date"/>

    <TextView
        android:id="@+id/start_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/start_year_label"
        app:layout_constraintLeft_toRightOf="@id/start_year_label"
        android:layout_marginStart="@dimen/margin"/>

    <TextView
        android:id="@+id/finish_year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/start_year_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/finish_date"
        android:layout_marginStart="@dimen/margin"/>

    <TextView
        android:id="@+id/finish_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/finish_year_label"
        app:layout_constraintLeft_toRightOf="@id/finish_year_label"
        android:layout_marginStart="@dimen/margin"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/staff_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/finish_year_label"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>